--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "c8",
+  "name": "@prantlf/c8",
   "version": "7.13.0",
   "description": "output coverage reports using Node.js' built in coverage",
   "main": "./index.js",
@@ -7,14 +7,19 @@
   "bin": "./bin/c8.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:bcoe/c8.git"
+    "url": "https://github.com/prantlf/c8.git"
   },
+  "homepage": "https://github.com/prantlf/c8#readme",
+  "bugs": "https://github.com/prantlf/c8/issues",
   "scripts": {
     "test": "cross-env TS_NODE_SKIP_PROJECT=true node ./bin/c8.js mocha --timeout=10000 ./test/*.js",
     "coverage": "cross-env TS_NODE_SKIP_PROJECT=true node ./bin/c8.js --check-coverage mocha --timeout=10000 ./test/*.js",
     "test:snap": "cross-env CHAI_JEST_SNAPSHOT_UPDATE_ALL=true npm test",
     "fix": "standard --fix",
     "posttest": "standard"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "standard": {
     "ignore": [
@@ -31,6 +36,9 @@
     "node"
   ],
   "author": "Ben Coe <ben@npmjs.com>",
+  "contributors": [
+    "Ferdinand Prantl <prantlf@gmail.com> (http://prantlf.tk/)"
+  ],
   "license": "ISC",
   "dependencies": {
     "@bcoe/v8-coverage": "^0.2.3",
@@ -46,7 +54,24 @@
     "yargs": "^16.2.0",
     "yargs-parser": "^20.2.9"
   },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/github",
+        {
+          "failComment": false
+        }
+      ],
+      "@semantic-release/git"
+    ]
+  },
   "devDependencies": {
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/git": "10.0.1",
     "@types/node": "^18.0.0",
     "chai": "^4.3.6",
     "chai-jest-snapshot": "^2.0.0",
